--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.555.0",
     "next": "16.0.4",
+    "next-pwa": "^5.6.0",
     "posthog-js": "^1.298.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
