Rebrand: Change all references from 'WhoIn.uk' to 'Whozin'
- Update global metadata (title, keywords, appleWebApp.title)
- Update all header logos across pages (home, auth, my-events, event, manage)
- Update JSON-LD structured data name
- Update FAQ text on homepage
- Update share card fallback link and WhatsApp message footer
- Update footer copyright text
- Update privacy and terms pages
- Update sitemap baseUrl to whozin.app
- Update PWA manifest name and short_name
- Update Open Graph image branding
- Update README.md title

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "WhoIn.uk",
-  "short_name": "WhoIn",
+  "name": "Whozin",
+  "short_name": "Whozin",
   "description": "Simple event sign-up tool",
   "start_url": "/",
   "display": "standalone",
